test/spec_vectors/store/fail/module_27.wat
(module (memory 1) (func $type-address-empty-in-br (i32.const 0) (i32.const 0) (block (br 0 (i32.store)))))